--- a/web_app/public/index.html
+++ b/web_app/public/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>web_app</title>
+    <title>The best sudoku app on the web</title>
+    <meta name="description" content="Play the best sudoku app on the web. Gain points, solve boards on time and compete with others.">
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but web_app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but the app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
