Slightly unretardify the description in the news panel

--- a/web_app/public/index.html
+++ b/web_app/public/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Play sudoku online. Gain points, solve boards on time and compete with other players - become the best sudoku solver.">
   </head>
   <body>
+    <h1 style="display: none">The best sudoku online</h1>
     <noscript>
       <strong>We're sorry but the app doesn't work properly without JavaScript enabled. Please enable it to play sudoku.</strong>
     </noscript>
