Add a canonical URL

--- a/web_app/public/index.html
+++ b/web_app/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href='https://thebestsudoku.io' rel='canonical'/>
     <title>Sudoku | The best sudoku app on the web</title>
     <meta name="description" content="Play sudoku online. Gain points, solve boards on time and compete with other players - become the best sudoku solver.">
   </head>
