Add an invisible SEO-friendly h2 header.

--- a/web_app/public/index.html
+++ b/web_app/public/index.html
@@ -11,6 +11,8 @@
   </head>
   <body>
     <h1 style="display: none">The best sudoku online</h1>
+    <h2 style="display: none"> Sudoku is one of the most popular combinatorial games. The objective is to fill a 9×9 grid with digits so that each column, each row, and each of the nine 3×3 subgrids that compose the grid contains all of the digits from 1 to 9.
+  h3 You can practive solving sudoku boards here and gain points for it. The best players are listed on the leaderboard. Notice that in order to gain points you have to login or create an account.</h2>
     <noscript>
       <strong>We're sorry but the app doesn't work properly without JavaScript enabled. Please enable it to play sudoku.</strong>
     </noscript>
