Add a few more things to satisfy weird SEO requirements

--- a/web_app/public/index.html
+++ b/web_app/public/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href='https://thebestsudoku.io' rel='canonical'/>
-    <title>Sudoku | The best sudoku app on the web</title>
+    <title>Sudoku | The best sudoku online</title>
     <meta name="description" content="Play sudoku online. Gain points, solve boards on time and compete with other players - become the best sudoku solver.">
   </head>
   <body>
-    <h1 style="display: none">The best sudoku online</h1>
-    <h2 style="display: none"> Sudoku is one of the most popular combinatorial games. The objective is to fill a 9×9 grid with digits so that each column, each row, and each of the nine 3×3 subgrids that compose the grid contains all of the digits from 1 to 9.
-  h3 You can practive solving sudoku boards here and gain points for it. The best players are listed on the leaderboard. Notice that in order to gain points you have to login or create an account.</h2>
+    <h1 style="display: none">The best sudoku online for everyone</h1>
+    <h2 style="display: none"> Sudoku is one of the most popular combinatorial games. The objective is to fill a 9×9 grid with digits so that each column, each row, and each of the nine 3×3 subgrids that compose the grid contains all of the digits from 1 to 9.</h2>
+    <p style="display: none">Everyone can practive solving sudoku boards online and gain points for it here. The best players are listed on the leaderboard. Notice that in order to gain points you have to login or create an account.</p>
     <noscript>
-      <strong>We're sorry but the app doesn't work properly without JavaScript enabled. Please enable it to play sudoku.</strong>
+      <strong>We're sorry but the web app doesn't work properly without JavaScript enabled. Please enable it to play sudoku.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
