add some basic meta tags

--- a/web_app/public/index.html
+++ b/web_app/public/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href='https://thebestsudoku.io' rel='canonical'/>
+    <meta name="title" content="Sudoku | The best sudoku online">
+    <meta name="description" content="Play free sudoku online, gain points and have fun competing with others. Choose one of three difficulty levels and solve boards on time.">
+    <meta name="keywords" content="sudoku online, web sudoku, web sudoku app, free sudoku, sudoku leaderboard, the best sudoku online, play sudoku">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
     <title>Sudoku | The best sudoku online</title>
-    <meta name="description" content="Play sudoku online. Gain points, solve boards on time and compete with other players - become the best sudoku solver.">
   </head>
   <body>
     <h1 style="display: none">The best sudoku online for everyone</h1>
